Added necessary environmental variables to docker file Moved geoserver installation to ROOT as well (for convenience)